Added person template to the project

--- a/index.html
+++ b/index.html
@@ -3,9 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
+    <title>Computer Science History - CS100</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row"><h1  class="display-2">A Diverse History of Computer Science</h1> </div>
+        <div class="row">
+            <div class="col-4"><img src="https://placehold.co/400" alt="PlaceHolder" /></div>
+            <div class="col"><p class="lead">This history of computer science and software engineering is a facsinating 
+                collection of people and machines. The timeline for computing extends 
+                to the earliest recorded histoyr.  Moreover, the signficant contributors 
+                to the discipline is comprised of both men and women from various ethnic 
+                and affinity groups including Black, Asian, LatinX, LGBTQ+, and many more.
+            Peruse the pages here to get a sense of the people and machines that
+                made modern computing possible.</p>
+            </p> 
+
+            <div class="row">
+                <div class="col-6">
+                    <h3 class="display-6">People in Computing</h3>
+                    <ol>
+                        <li><a href="#">Avram, Henriette</a></li>
+                        <li><a href="#">Babbage, Charles</a></li>
+                        <li><a href="#">Dijkstra, Edsger</a></li>
+                        <li><a href="#">Gates, Bill</a></li>
+                        <li><a href="#">Hopper, Grace</a></li>
+                        <li><a href="#">Jobs, Steve</a></li>
+                        <li><a href="#">Jones, Karen Sparck</a></li>
+                        <li><a href="#">Keller, Mary Kenneth</a></li>
+                        <li><a href="#">Lawson, Jerry</a></li>
+                        <li><a href="#">Lovelace, Ada</a></li>
+                        <li><a href="#">von Ahn, Luis</a></li>
+                        <li><a href="#">de Icaza, Miguel</a></li>
+                        <li><a href="#">Suajani, Reshma</a></li>
+                        <li><a href="#">Shannon, Claude</a></li>
+                        <li><a href="#">Turing, Alan</a></li>
+                        <li><a href="#">von Neumann, John</a></li>
+                        <li><a href="#">Wozniak, Steve</a></li>
+                    </ol>
+                </div>
+                <div class="col-6">
+                    <h3 class="display-6">Computing Machines</h3>
+                    <ol>
+                        <li><a href="#">Abacus</a></li>
+                        <li><a href="#">Altair</a></li>
+                        <li><a href="#">Analytical Engine</a></li>
+                        <li><a href="#">Antikythera Mechanism</a></li>
+                        <li><a href="#">Apple I</a></li>
+                        <li><a href="#">Bombe</a></li>
+                        <li><a href="#">Difference Engine</a></li>
+                        <li><a href="#">ENIAC</a></li>
+                        <li><a href="#">Enigma</a></li>
+                        <li><a href="#">Hollerith Tabulating Machine</a></li>
+                        <li><a href="#">IBM PC - Model 5150</a></li>
+                        <li><a href="#">Jacquard Loom</a></li>
+                        <li><a href="#">Pascaline</a></li>
+                        <li><a href="#">Slide Rule</a></li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+        
+    </div>
+
+    <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
