Added machine template and updated other .html files to fix typos

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                     <ol>
                         <li><a href="#">Avram, Henriette</a></li>
                         <li><a href="#">Babbage, Charles</a></li>
+                        <li><a href="#">Berners-Lee, Tim</a></li>
                         <li><a href="#">Dijkstra, Edsger</a></li>
                         <li><a href="#">Gates, Bill</a></li>
                         <li><a href="#">Hopper, Grace</a></li>
