Added some of the links to index.html

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
                 <div class="col-6">
                     <h3 class="display-6">People in Computing</h3>
                     <ol>
-                        <li><a href="#">Avram, Henriette</a></li>
-                        <li><a href="#">Babbage, Charles</a></li>
-                        <li><a href="#">Berners-Lee, Tim</a></li>
-                        <li><a href="#">Dijkstra, Edsger</a></li>
-                        <li><a href="#">Gates, Bill</a></li>
-                        <li><a href="#">Hopper, Grace</a></li>
+                        <li><a href="avram.html">Avram, Henriette</a></li>
+                        <li><a href="babbage.html">Babbage, Charles</a></li>
+                        <li><a href="berners-lee.html">Berners-Lee, Tim</a></li>
+                        <li><a href="dijkstra.html">Dijkstra, Edsger</a></li>
+                        <li><a href="gates.html">Gates, Bill</a></li>
+                        <li><a href="hopper.html">Hopper, Grace</a></li>
                         <li><a href="#">Jobs, Steve</a></li>
                         <li><a href="#">Jones, Karen Sparck</a></li>
                         <li><a href="#">Keller, Mary Kenneth</a></li>
