--- a/IBM_Model_5150.html
+++ b/IBM_Model_5150.html
@@ -18,11 +18,7 @@
                 <p class="lead">The 5150 was developed by IBM under Don Eskridge. It was created using off-the-shelf parts which
 			allowed it to be cheaply manufactured. It essentially opened the personal computing market in America.
                 <h3 class="display-6">History</h3>
-                <p>Two or three paragraphs outlining the history of the machine.  Answer questions 
-                    like who invented it, why they invented it, who used it, how long it was used. Also
-                    include as much technical detail as you reasonably can about the device.
-
-		   The IBM Model 5150 finished development in 1981 under Don Eskridge at IBM. It was released August 12th of that year. It was primarily intended for serious business tasks but also had the capability to play games and other programs.                </p>
+                <p>The IBM Model 5150 finished development in 1981 under Don Eskridge at IBM. It was released August 12th of that year. It was primarily intended for serious business tasks but also had the capability to play games and other programs.                </p>
 
 		<p>
 		The Model 5150 started at $1565 ($5040 in 2022 adjusted for inflation) and included:
