added image folder and edited berners-lee.html

--- a/berners-lee.html
+++ b/berners-lee.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="row"> </div>
         <div class="row">
-            <div class="col-4"><img src="https://upload.wikimedia.org/wikipedia/commons/f/f8/Tim_Berners-Lee.jpg" alt="PlaceHolder" /> <strong>Tim Berners-Lee</strong></div>
+            <div class="col-4"><img src="img/Tim_Berners-Lee.jpeg" alt="PlaceHolder" /> <strong>Tim Berners-Lee</strong></div>
             <div class="col"><h2  class="display-2">Tim Berners-Lee</h2>
                 <p><strong>Dates: </strong>Born: June 8th, 1955</p>
                 <h3 class="display-6">Significant Contribution</h3>
