Update links to biography pages

--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
                         <li><a href="dijkstra.html">Dijkstra, Edsger</a></li>
                         <li><a href="gates.html">Gates, Bill</a></li>
                         <li><a href="hopper.html">Hopper, Grace</a></li>
-                        <li><a href="#">Jobs, Steve</a></li>
-                        <li><a href="#">Jones, Karen Sparck</a></li>
-                        <li><a href="#">Keller, Mary Kenneth</a></li>
+                        <li><a href="stevejobs.html">Jobs, Steve</a></li>
+                        <li><a href="jones.html">Jones, Karen Sparck</a></li>
+                        <li><a href="keller.html">Keller, Mary Kenneth</a></li>
                         <li><a href="#">Lawson, Jerry</a></li>
-                        <li><a href="#">Lovelace, Ada</a></li>
+                        <li><a href="Ada Lovelace.html">Lovelace, Ada</a></li>
                         <li><a href="#">von Ahn, Luis</a></li>
-                        <li><a href="#">de Icaza, Miguel</a></li>
+                        <li><a href="de-iacaza.html">de Icaza, Miguel</a></li>
                         <li><a href="#">Suajani, Reshma</a></li>
                         <li><a href="#">Shannon, Claude</a></li>
-                        <li><a href="#">Turing, Alan</a></li>
+                        <li><a href="turing.html">Turing, Alan</a></li>
                         <li><a href="#">von Neumann, John</a></li>
                         <li><a href="#">Wozniak, Steve</a></li>
                     </ol>
@@ -47,17 +47,17 @@
                 <div class="col-6">
                     <h3 class="display-6">Computing Machines</h3>
                     <ol>
-                        <li><a href="#">Abacus</a></li>
-                        <li><a href="#">Altair</a></li>
-                        <li><a href="#">Analytical Engine</a></li>
-                        <li><a href="#">Antikythera Mechanism</a></li>
-                        <li><a href="#">Apple I</a></li>
-                        <li><a href="#">Bombe</a></li>
-                        <li><a href="#">Difference Engine</a></li>
+                        <li><a href="Abacus.html">Abacus</a></li>
+                        <li><a href="Altair.html">Altair</a></li>
+                        <li><a href="analytical_machine.html">Analytical Machine</a></li>
+                        <li><a href="antikythera.html">Antikythera Mechanism</a></li>
+                        <li><a href="apple1.html">Apple I</a></li>
+                        <li><a href="bombe.html">Bombe</a></li>
+                        <li><a href="difference.html">Difference Engine</a></li>
                         <li><a href="#">ENIAC</a></li>
                         <li><a href="#">Enigma</a></li>
-                        <li><a href="#">Hollerith Tabulating Machine</a></li>
-                        <li><a href="#">IBM PC - Model 5150</a></li>
+                        <li><a href="Hollerith_Tabulating_Machine.html">Hollerith Tabulating Machine</a></li>
+                        <li><a href="IBM_Model_5150.html">IBM Model 5150</a></li>
                         <li><a href="#">Jacquard Loom</a></li>
                         <li><a href="#">Pascaline</a></li>
                         <li><a href="#">Slide Rule</a></li>
